<resources>
    <string name="app_name">MakeFor</string>
    <string name="user_status">user status</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="need_new_account">Need new Account ?</string>
    <string name="user_name">user name</string>
    <string name="password">Password…</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="email">Email…</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="hey_i_am_available_now">hey, i am available now.</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="no_result_with_this_name">No result with this name…</string>
    <string name="create_new_queue">Create New Queue</string>
    <string name="queue_name">Queue Name</string>
    <string name="search_by_name">Search By Name</string>
    <string name="search_by_code">Search By Code</string>
    <string name="enter_queue">Enter Queue</string>
    <string name="enter_an_id_code">Enter an ID code</string>
    <string name="delete_all">Delete All</string>
</resources>
