<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.autochthonoustech.makefor.ui.FindQueueFragment">

    <EditText
        android:layout_margin="10dp"
        android:padding="10dp"
        android:id="@+id/search_queue_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/search_queue_button"
        android:layout_toLeftOf="@+id/search_queue_button"
        android:background="@drawable/inputs"
        android:textCursorDrawable="@android:color/black"
        android:hint="@string/search_by_name"
        android:inputType="text"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/search_queue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttons"
        android:textColorHint="@color/colorAccent"
        android:layout_margin="10dp"
        android:hint="@string/search"/>

    <EditText
        android:layout_margin="10dp"
        android:padding="10dp"
        android:id="@+id/search_code_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/search_queue_button"
        android:layout_toLeftOf="@+id/search_queue_button"
        android:background="@drawable/inputs"
        android:layout_below="@+id/search_queue_text_input"
        android:textCursorDrawable="@android:color/black"
        android:hint="@string/search_by_code"
        android:inputType="text"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/search_by_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttons"
        android:textColorHint="@color/colorAccent"
        android:layout_below="@+id/search_queue_text_input"
        android:layout_margin="10dp"
        android:hint="@string/search"/>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_code_text_input"
        android:textColor="@color/colorBlack"
        android:text="@string/no_result_with_this_name"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/find_queue_recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/no_result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

</RelativeLayout>