<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.autochthonoustech.makefor.SettingsActivity">


    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/settings_toolbar"
        >
    </include>

    <EditText
        android:id="@+id/set_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_toolbar"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/username"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textCursorDrawable="@android:color/black"
        android:textStyle="bold"
        android:background="@drawable/inputs"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="40dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_name"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/hey_i_am_available_now"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textCursorDrawable="@android:color/black"
        android:textStyle="bold"
        android:background="@drawable/inputs"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/update_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_status"
        android:text="@string/update"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        />

</RelativeLayout>