<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/profile_item_design"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/user_name"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:text="@string/user_status"
            android:textAlignment="textStart"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/my_number"
        android:padding="10dp"
        android:background="@drawable/ppl_in_queue"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/number_in_queue"
        android:padding="10dp"
        android:background="@drawable/my_number"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:text="@string/enter_queue"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:visibility="visible" />


</LinearLayout>
